<resources>
    <string name="app_name">ConcreteApp</string>
    <string name="code_0">Connection timeout</string>
    <string name="code_404">Resource not avaliable</string>
    <string name="e_session_expired">Your session has expired</string>
    <string name="e_cant_be_empty">This field can\'t be empty</string>
    <string name="e_petition">Request error</string>
    <string name="server_response">SERVER_RESPONSE</string>
    <string name="server_message">SERVER_MESSAGE</string>
    <string name="gst_check">Please Add GSTIN and PAN</string>
    <string name="sharedPreferences">com.example.jarvis.constructionapp</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">LogIn</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="SignUp">Dont have an account? SignUp</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Qual">Quality</string>
    <string name="Issue">Category</string>
    <string-array name="purchase_order">
        <item>Select PO</item>
        <item>Acc</item>
        <item>Ultratech</item>
        <item>Ambuja</item>
    </string-array>
    <string-array name="categoryiss">
        <item>Select Issue</item>
        <item>Quantity</item>
        <item>Quality</item>
        <item>Unsafe Condition</item>
        <item>Delay in Delivery</item>
    </string-array>
    <string-array name="Quality_Type">
        <item>M05</item>
        <item>M7.5</item>
        <item>M10</item>
        <item>M15</item>
        <item>M20</item>
        <item>M25</item>
        <item>M30</item>
        <item>M35</item>
        <item>M40</item>
        <item>M45</item>
        <item>M50</item>
        <item>M55</item>
        <item>M60</item>
        <item>M65</item>
        <item>M70</item>
        <item>M75</item>
        <item>M80</item>
        <item>M85</item>
        <item>M90</item>
        <item>M95</item>
        <item>M100</item>
    </string-array>
    <string-array name="listofplant">
        <item>No site Added By User</item>
    </string-array>
    <string-array name="Quality_Type1">
        <item>M05</item>
        <item>M7.5</item>
        <item>M10</item>
        <item>M15</item>
        <item>M20</item>
        <item>M25</item>
        <item>M30</item>
        <item>M35</item>
        <item>M40</item>
        <item>M45</item>
        <item>M50</item>
        <item>M55</item>
        <item>M60</item>
        <item>M70</item>
        <item>M80</item>
        <item>M100</item>
    </string-array>
    <string-array name="response_id">
        <item>No Response</item>
    </string-array>
    <string-array name="usertype">
        <item>Individual</item>
        <item>Contractor</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_concrete">What do we care a lot while concreting ? Obviously the answer is “Grade of Concrete”.
It is defined as the minimum strength the concrete must posses after 28 days of construction with proper quality control. Grade of concrete is denoted by prefixing M to the desired strength in MPa.  The “M” denotes Mix design of concrete followed by the compressive strength number in N/mm2
“Mix” is the respective ingredient proportions which are Cement: Sand: Aggregate Or Cement: Fine Aggregate: Coarse Aggregate.For Example: If we mention M10 concrete, it means that the concrete has 10 N/mm2 characteristic compressive strength at 28 days.</string>
    <string name="M05">M5 : Mix Ratio is 1:5:10. It is an ordinary concrete which is basically used in Plain Cement Concrete works which is used to provide a strong &amp; stable base for foundation, it also provides a flat base for upcoming foundation rather than undulated base.</string>
    <string name="M7.5">M7.5: Mix Ratio is 1:4:8. It is an ordinary concrete which is basically used in Plain Cement Concrete works which is used for building Construction.</string>
    <string name="M10">M10: Mix Ratio is 1:3:6. Generally M10 is  used for leveling course, and bedding for footings.</string>
    <string name="M15">M15: Mix Ratio is 1:2:4. It is also used in same purposes as M10 but here the mix ratio creates the whole difference.</string>
    <string name="M20">M20: Mix Ratio is 1:1.5:3. M20 is applicable for Reinforced Cement Concrete (RCC) works for slabs, beams, columns.</string>
    <string name="M25">M25: Mix Ratio is 1 : 1 : 2. It  is usually preferred for high rise building like 3 or 4 storey\'s to resist the high range load and for constructing Beam, Columns, and slabs etc.</string>
    <string name="M30">M30: It is a standard Concrete. It is used  for pathways and roadways on which heavy vehicles will be driving on regularly – such as yards, farms or HGV slipways. </string>
    <string name="M35">M35:It is used in concrete pavements because they are designed for flexural strength.</string>
    <string name="M40">M40: It is a strong grade of concrete that is mostly used on commercial construction sites, where it will be utilised to create foundations and beams for support and roads.</string>
    <string name="M45">M45: It is also a Ready Mix concrete which is used primarily in building Construction.</string>
    <string name="M50">M50: M50 Grade concrete is used in heavily reinforced structures which have to bear dynamic loading .</string>
    <string name="M55">M55: Used in Prestressed Concrete Girders and Piers.</string>
    <string name="M60">M60: It is used where high compressive strength is required such as high rise buildings, long span</string>
    <string name="M70">M70: M70 concrete mix with 10% silica fume showed least abrasion loss and was selected for use in the construction project.</string>
    <string name="M80">M80: It is used in bridges, ultra-thin white topping etc and constructions in aggressive environment e.g. Spillways of dams, coastal construction</string>
    <string name="M100">M100: It is used in constructing building like Burj Khalifa.</string>
    <string name="title_activity_maps">Map</string>

</resources>
